tests/models/struct/named/u64/pass/le.rs
use dade::model;
#[model]
struct TestModel {
    #[field(le = 2)]
    value: u64,
}
fn main() {}
