tests/models/struct/named/u64/fail/min_length.rs
use dade::model;
#[model]
struct TestModel {
    #[field(min_length = 2)]
    value: u64,
}
fn main() {}
